jwt y usuario agregado
Se agrego jwt para validacion de usuarios y solicitudes

Falta guardar la info del usuario en cookies, hay problema al obtener la información o cualquier solicitud que tenga que acceder al jwt de momento, desconozco el error
